// Centralized version management for all modules
plugins {
    id 'org.openrewrite.rewrite' version '7.39.0' apply false
    id 'io.spring.dependency-management' version '1.1.7' apply false
    id 'org.springframework.boot' version '4.1.1' apply false
}

ext {
    // Project version (can be overridden via -PbuildVersion=X.Y.Z)
    projectVersion = project.hasProperty('buildVersion') ? project.property('buildVersion') : '2.4.8'

    // Library versions
    bcryptVersion = '0.4'
    brotliDecVersion = '0.1.2'
    caffeineVersion = '3.2.3'
    guavaVersion = '33.5.0-jre'
    jjwtVersion = '0.13.0'
    jsoupVersion = '1.22.1'
    lombokVersion = '1.18.44'
    seleniumVersion = '4.41.0'
    springdocVersion = '2.8.13'
    twelvemonkeysVersion = '3.13.1'
    webdrivermanagerVersion = '6.3.3'

    // Test dependency versions
    jacocoVersion = '0.8.14'

    // Tool versions
    checkstyleVersion = '13.3.0'
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'idea'
    apply plugin: 'jacoco'
    apply plugin: 'checkstyle'
    apply plugin: 'org.openrewrite.rewrite'

    // Set version from central definition
    version = rootProject.ext.projectVersion
    group = 'kkdad'

    repositories {
        mavenCentral()
    }

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(25)
        }
    }

    // Emit method/constructor parameter names in bytecode so Spring Boot constructor
    // binding (used by @ConfigurationProperties classes) can map property keys to
    // constructor parameters. Required for our immutable Lombok properties classes.
    tasks.withType(JavaCompile).configureEach {
        options.compilerArgs << '-parameters'
    }

    // Default JaCoCo configuration for all subprojects
    jacoco {
        toolVersion = rootProject.ext.jacocoVersion
    }

    // Checkstyle configuration
    checkstyle {
        toolVersion = rootProject.ext.checkstyleVersion
        configFile = rootProject.file('config/checkstyle/checkstyle.xml')
        configDirectory = rootProject.file('config/checkstyle')
        ignoreFailures = true  // Report but don't fail build initially
        maxWarnings = 0
    }

    checkstyleMain {
        source = 'src/main/java'
    }

    checkstyleTest {
        source = 'src/test/java'
        enabled = false  // Skip checkstyle on test code initially
    }

    // Apply Spring Boot BOM to all modules using dependency-management plugin.
    // BOM_COORDINATES comes from the Spring Boot plugin declared above, so Dependabot's
    // plugin bump is the only Spring Boot version to maintain.
    pluginManager.withPlugin('io.spring.dependency-management') {
        dependencyManagement {
            imports {
                mavenBom org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES
            }
        }
    }

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
        // Mockito's inline mock maker is loaded as a javaagent instead of self-attaching (JEP 451)
        mockitoAgent
    }

    dependencies {
        // JUnit Platform Launcher for all subprojects (required by Gradle 8.5+)
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

        // Lombok
        compileOnly "org.projectlombok:lombok:${rootProject.ext.lombokVersion}"
        annotationProcessor "org.projectlombok:lombok:${rootProject.ext.lombokVersion}"
        testCompileOnly "org.projectlombok:lombok:${rootProject.ext.lombokVersion}"
        testAnnotationProcessor "org.projectlombok:lombok:${rootProject.ext.lombokVersion}"

        // Common test dependencies
        testImplementation "org.assertj:assertj-core"
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        mockitoAgent('org.mockito:mockito-core') {
            transitive = false
        }

        // OpenRewrite Recipes
        rewrite("org.openrewrite.recipe:rewrite-testing-frameworks:3.44.0")
        rewrite("org.openrewrite.recipe:rewrite-static-analysis:2.41.1")
        rewrite("org.openrewrite.recipe:rewrite-migrate-java:3.42.1")
    }

    tasks.withType(Test).configureEach {
        useJUnitPlatform()
        def mockitoAgentFiles = configurations.mockitoAgent
        jvmArgumentProviders.add({ ["-javaagent:${mockitoAgentFiles.singleFile}"] } as CommandLineArgumentProvider)
    }

    test {
        finalizedBy jacocoTestReport
    }

    jacocoTestReport {
        dependsOn test
        reports {
            xml.required = true
            html.required = true
        }
        afterEvaluate {
            classDirectories.setFrom(files(classDirectories.files.collect {
                fileTree(dir: it, exclude: [
                    "**/dto/**",
                    "**/config/properties/**",
                    "**/*Exception.class"
                ])
            }))
        }
    }

    // Per-module coverage thresholds — ratchet towards 0.80
    // Override in module build.gradle: ext.jacocoCoverageMinimum = X.XX
    ext.jacocoCoverageMinimum = 0.80

    afterEvaluate {
        jacocoTestCoverageVerification {
            dependsOn jacocoTestReport
            violationRules {
                rule {
                    limit {
                        counter = 'LINE'
                        value = 'COVEREDRATIO'
                        minimum = project.ext.jacocoCoverageMinimum
                    }
                }
            }
            classDirectories.setFrom(files(classDirectories.files.collect {
                fileTree(dir: it, exclude: [
                    "**/dto/**",
                    "**/config/properties/**",
                    "**/*Exception.class"
                ])
            }))
        }
    }

    rewrite {
        configFile = rootProject.file('rewrite.yaml')
        activeRecipe("com.comiccacher.StyleGuide")
    }
}

// Run all tests across all subprojects and enforce coverage
tasks.register('testAll') {
    dependsOn subprojects.collect { it.path + ':test' }
    dependsOn subprojects.collect { it.path + ':jacocoTestCoverageVerification' }
    description = 'Runs all tests and enforces coverage in all subprojects'
    group = 'verification'
}
